# realestate

./: prompt.txt
backend/: .env.example  .gitignore  README.md  debug_clarification.py  pyproject.toml  test_filters.py
backend/alembic/: env.py
backend/alembic/versions/: 7c77fddace7e_initial_migration.py
backend/app/: main.py
backend/app/ai/: agent.py  constants.py  openrouter_client.py  utils.py
backend/app/core/: ai.py  db.py  schemas.py
backend/app/modules/assistant/: processor.py  router.py  schemas.py  service.py
backend/app/modules/conversations/: models.py  router.py  schemas.py  service.py
backend/app/modules/properties/: models.py  router.py  schemas.py  seed_data.py  service.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/[sessionId]/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/properties/: page.tsx
frontend/src/components/: ChatInterface.tsx  Header.tsx  PropertyCard.tsx  SessionSidebar.tsx
frontend/src/lib/: axios.ts  store.ts
